# spectral-exr

./: .clang-format  CMakeLists.txt  LICENSE  README.md  format-all.sh
.github/workflows/: cmake.yml
app/: CMakeLists.txt
app/combine-exr/: CMakeLists.txt  main.cpp
app/export-reradiation/: CMakeLists.txt  main.cpp
app/export-spectrum/: CMakeLists.txt  main.cpp
app/fluo-exr/: CMakeLists.txt  fluo_data.h  main.cpp
app/macbeth/: CMakeLists.txt  README.md  macbeth_data.h  main.cpp
app/merge-exr/: CMakeLists.txt  main.cpp
app/spectrum-to-exr/: CMakeLists.txt  main.cpp
app/split-channels/: CMakeLists.txt  main.cpp
lib/: BiSpectralImage.cpp  CMakeLists.txt  EXRBiSpectralImage.cpp  EXRSpectralImage.cpp  EXRSpectralImage.pc.in  MathUtil.h  SpectralImage.cpp  SpectrumAttribute.cpp  SpectrumConverter.cpp  SpectrumConverter.h  Util.h  spectrum_data.h
lib/include/: BiSpectralImage.h  EXRBiSpectralImage.h  EXRSpectralImage.h  SpectralImage.h  SpectrumAttribute.h  SpectrumType.h
python/: Read Spectral EXR.ipynb
python/data/image/: D65.exr  Macbeth.exr
python/radiometry/: cmf.py
src/: BiSpectralImage.cpp  CMakeLists.txt  EXRBiSpectralImage.cpp  EXRBiSpectralImage.h  SpectralImage.cpp  SpectralImage.h  main.cpp
